--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -28,7 +28,11 @@ RUN apt-get update && apt-get install -y \
   libsmbclient \
   libssh-4 \
   fbset \
-  libexpat-dev && rm -rf /var/lib/apt/lists/*
+  libexpat-dev \
+  bluez=5.23-2+rpi2 \
+  bluez-firmware=1.2-3+rpi1 \
+  libudev-dev \
+  && rm -rf /var/lib/apt/lists/*
 
 # Set Xorg and FLUXBOX preferences
 RUN mkdir ~/.fluxbox
